Added PHP files for Steam OpenID login implementation
must have XAMPP downloaded to test locally

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,6 +10,10 @@
 
     <input type="text" id = "unique" placeholder="Enter uniqueid (TEMPORARY)">
     <button id = "submit" onclick="temp()"> Join Clan (TEMPORARY) </button>
+	
+	<a href="./openId.php">
+	<img alt="Sign in through Steam" src="steam_login.png">
+	</a>
 
     <script>
         function onSubmit() {
