Update user clan page

--- a/app/public/user_clan/index.html
+++ b/app/public/user_clan/index.html
@@ -16,6 +16,8 @@
 	</thead>
 	<tbody id="clans"></tbody>
 </table>
+<div id="clanList"></div>
+<div id="clanInfo"></div>	
 
 <script src="script.js"></script>
 
