--- a/app/public/clan_pages/index.html
+++ b/app/public/clan_pages/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+    <script src="script.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="chat.js"></script>
 </body>
