Adding functionalities to clan page

--- a/app/public/clan_pages/index.html
+++ b/app/public/clan_pages/index.html
@@ -2,10 +2,31 @@
 <head>
     <meta charset="utf-8" />
     <title>Chat</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
+<h2 id="clanName"> </h2>
+<h3 id="ifPublic"> </h3>
+<div id="clanDescription"> </div>
+<br>
+
+<table>
+	<thead>
+		<tr><th>Clan Members</th></tr>
+	</thead>
+	<tbody id="clanMembers"></tbody>
+</table>
+
+
+
+
+<!-- <div id="chat">
+    <div id="messages"></div>
+    <input id="input" autocomplete="off" /><button id="send">Send</button>
+</div> -->
 
 <body>
     <script src="script.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="chat.js"></script>
+    <!-- <script src="/socket.io/socket.io.js"></script>
+    <script src="chat.js"></script> -->
 </body>
