Updating clan page

--- a/app/public/clan_pages/index.html
+++ b/app/public/clan_pages/index.html
@@ -17,8 +17,10 @@
 	<tbody id="clanMembers"></tbody>
 </table>
 
+<br>
+<br>
 
-
+<textarea id="chatBox" class="scrollabletextbox" name="note"></textarea>
 
 <!-- <div id="chat">
     <div id="messages"></div>
