Steam-passport authorization

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,6 +10,8 @@
 
     <input type="text" id = "unique" placeholder="Enter uniqueid (TEMPORARY)">
     <button id = "submit" onclick="temp()"> Join Clan (TEMPORARY) </button>
+	
+	<a href="/api/auth/steam"><img alt="Sign in through Steam" src="https://community.cloudflare.steamstatic.com/public/images/signinthroughsteam/sits_01.png"></a>
 
     <script>
         function onSubmit() {
