Update clan Pages

--- a/app/public/clan_pages/index.html
+++ b/app/public/clan_pages/index.html
@@ -5,10 +5,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<h2 id="clanName"> </h2>
-<h3 id="ifPublic"> </h3>
-<div id="clanDescription"> </div>
-<br>
+<h1 id="clan"></h1>
+<p id="clanName"> </p>
+<p id="clanId"> </p>
+<p id="clanDescription"> </p>
+<p id="ifPublic"> </p>
+
 
 <table>
 	<thead>
