--- a/app/public/user_clan/index.html
+++ b/app/public/user_clan/index.html
@@ -7,16 +7,18 @@
 </head>
 
 <body>
-<h1>Clans</h1>
-<p id="welcomeUser"></p> 
+<h1 id="welcomeUser"></h1>
+<p id="userName"> </p>
+<p id="steamId"></p> 
+<p id="region"></p>
 
-<table>
+<!-- <table>
 	<thead>
 		<tr><th>Clans</th></tr>
 	</thead>
 	<tbody id="clans"></tbody>
-</table>
-<div id="clanList"></div>
+</table> -->
+<div id="clanList"><b>Clans: </b></div>
 <div id="clanInfo"></div>	
 
 <script src="script.js"></script>
