--- a/app/private/userInfo/index.html
+++ b/app/private/userInfo/index.html
@@ -25,10 +25,20 @@
 					console.log("error fetching user data");
 				}
 				else{
-					console.log(body);
 					document.getElementById("name").textContent = body.displayName;
 					document.getElementById("pfp").src = body.photos[2].value;
 					document.getElementById("profile").href = body._json.profileurl;
+				}
+			})
+		});
+		
+		fetch("/internal-user-info").then((response) => {
+			response.json().then(body => {
+				if(!body[0].hasOwnProperty("id")){
+					console.log("error fetching user data");
+				}
+				else{
+					document.getElementById("region").value = body[0].region;
 				}
 			})
 		});
