Updating the public clan pages

--- a/app/public/clans_display/index.html
+++ b/app/public/clans_display/index.html
@@ -8,7 +8,12 @@
 
 <body>
 <h1 id="welcomeUser">Welcome to our official clan page!</h1>	
-<p id="clans"></p>
+<p id="privateClanInfo">To join a Private clan enter the clans' unique id in the below input box.</p>
+<input type="text" id="privateClanJoin" placeholder="Join Clan">
+<button id="joinClan" onclick="callJoinClan()">Join Clan</button>
+<br>
+<br>
+
 <table id="dataTable">
     <thead>
       <tr>
