--- a/app/private/userInfo/index.html
+++ b/app/private/userInfo/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Edit User Information</title>
+    <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 
 <body>
