--- a/app/public/clans_display/index.html
+++ b/app/public/clans_display/index.html
@@ -4,9 +4,16 @@
 	<meta charset="utf-8">
 	<title>Clans Page</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/static/styles.css">
 </head>
 
 <body>
+    <nav id="menu">
+        <a href="../../clans_display"> Join Clan </a>
+        <a href="/../create_clan"> Create Clan </a>
+        <a href="/../user-profile"> Profile </a>
+        <a href="/logout"> Log Out </a>
+    </nav>
 <h1 id="welcomeUser">Welcome to our official clan page!</h1>	
 <p id="privateClanInfo">To join a Private clan enter the clans' unique id in the below input box.</p>
 <input type="text" id="privateClanJoin" placeholder="Join Clan">
